adding surrender button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <button id="newGameBtn">New Game</button>
     <button id="hitBtn" disabled>Hit</button>
     <button id="standBtn" disabled>Stand</button>
+    <button id="surrenderBtn" disabled>Surrender</button>
   </div>
 
   <div id="status" class="status">Click “New Game”.</div>
