added basic strategy image

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
             border: 1px solid #ddd;
             border-radius: 10px;
         }
+
+        .table-image {
+            display: block;
+            margin: 16px auto 0;
+            max-width: 100%;
+            border-radius: 12px;
+            opacity: 0.9;
+        }
     </style>
 </head>
 
@@ -62,7 +70,7 @@
     </div>
 
     <div id="status" class="status">Click “New Game”.</div>
-
+    <img src="images/basic_strategy.jpg" alt="Casino table" class="table-image" />
     <script src="blackjack-game.js"></script>
 </body>
 
