multiple additions to function

--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
         <button id="hitBtn" disabled>Hit</button>
         <button id="standBtn" disabled>Stand</button>
         <button id="surrenderBtn" disabled>Surrender</button>
+        <label style="margin-left: 12px;">
+            Decks:
+            <select id="deckCountSelect">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="6">6</option>
+                <option value="8">8</option>
+            </select>
+        </label>
     </div>
 
     <div id="status" class="status">Click “New Game”.</div>
