--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Basic Blackjack</title>
+    <title>Basic Blackjack Training</title>
     <style>
         body {
             font-family: system-ui, Arial;
@@ -39,30 +39,64 @@
 
         .table-image {
             display: block;
-            margin: 10px auto 0;
+            margin: 16px auto 0;
             max-width: 100%;
             border-radius: 12px;
-            opacity: 0.9;
-        }
-
-        .hand {
-            display: flex;
-            gap: 10px;
-            flex-wrap: wrap;
-            align-items: center;
-            margin-top: 8px;
+            margin-left: 0;
+            transform: scale(0.85);
+            /* zoom in */
+            overflow: hidden;
         }
 
         .hand img {
             width: 72px;
             height: auto;
-            
+            border-radius: 8px;
+        }
+
+        .dealt {
+            opacity: 0;
+            transform: translateY(-10px);
+            animation: dealCard 0.25s ease-out forwards;
+        }
+
+        @keyframes dealCard {
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .hand img {
+            width: 72px;
+            height: auto;
+
+        }
+
+        h1 {
+            text-align: center;
+            letter-spacing: 2px;
+            margin-bottom: 24px;
+            text-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
+        }
+
+        #bankrollRow {
+            display: flex;
+            gap: 12px;
+            align-items: center;
+            flex-wrap: wrap;
+        }
+
+        #betInput {
+            padding: 6px 8px;
+            border-radius: 10px;
+            border: 1px solid #ccc;
         }
     </style>
 </head>
 
 <body>
-    <h1>Blackjack</h1>
+    <h1>Basic Blackjack Training</h1>
 
     <div class="row">
         <strong>Dealer:</strong>
@@ -81,7 +115,9 @@
         <button id="hitBtn" disabled>Hit</button>
         <button id="standBtn" disabled>Stand</button>
         <button id="surrenderBtn" disabled>Surrender</button>
-        <label style="margin-left: 12px;">
+        <button id="doubleBtn" disabled>Double</button>
+        <button id="splitBtn" disabled>Split</button>
+        <label style="margin-left: 20px;">
             Decks:
             <select id="deckCountSelect">
                 <option value="1">1</option>
@@ -95,8 +131,30 @@
     </div>
 
     <div id="status" class="status">Click “New Game”.</div>
+    <div class="row" id="bankrollRow">
+        <strong>Bankroll:</strong> $<span id="bankrollAmt">1000</span>
+        <span style="margin-left:12px;">
+            <label for="betInput"><strong>Bet:</strong></label>
+            $<input id="betInput" type="number" min="1" step="1" value="25" style="width:90px;">
+        </span>
+    </div>
     <img src="images/basic_strategy.jpg" alt="Casino table" class="table-image" />
     <script src="blackjack-game.js"></script>
+    <footer class="credits">
+        <em>
+            Playing cards thanks to
+            <br>
+            Vectorized Playing Cards 1.3 –
+            <a href="http://code.google.com/p/vectorized-playing-cards/" target="_blank" rel="noopener noreferrer">
+                http://code.google.com/p/vectorized-playing-cards/
+            </a><br>
+            Copyright © 2011 – Chris Aguilar<br>
+            Licensed under LGPL 3 –
+            <a href="https://www.gnu.org/copyleft/lesser.html" target="_blank" rel="noopener noreferrer">
+                www.gnu.org/copyleft/lesser.html
+            </a>
+        </em>
+    </footer>
 </body>
 
 </html>
