--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Basic Blackjack Training</title>
+
     <style>
         body {
             font-family: system-ui, Arial;
             padding: 24px;
-            max-width: 700px;
+            max-width: 760px;
             margin: 0 auto;
             background-color: #0f5132;
-            /*felt green */
             color: #f1f5f3;
+        }
+
+        h1 {
+            text-align: center;
+            letter-spacing: 2px;
+            margin-bottom: 24px;
+            text-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
         }
 
         button {
@@ -28,24 +35,6 @@
 
         .cards {
             font-family: ui-monospace, SFMono-Regular, Menlo, monospace;
-        }
-
-        .status {
-            margin-top: 12px;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-        }
-
-        .table-image {
-            display: block;
-            margin: 16px auto 0;
-            max-width: 100%;
-            border-radius: 12px;
-            margin-left: 0;
-            transform: scale(0.85);
-            /* zoom in */
-            overflow: hidden;
         }
 
         .hand img {
@@ -67,17 +56,19 @@
             }
         }
 
-        .hand img {
-            width: 72px;
-            height: auto;
-
+        .status {
+            margin-top: 12px;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 10px;
         }
 
-        h1 {
-            text-align: center;
-            letter-spacing: 2px;
-            margin-bottom: 24px;
-            text-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
+        .table-image {
+            display: block;
+            margin: 16px auto 0;
+            max-width: 100%;
+            border-radius: 12px;
+            transform: scale(0.85);
         }
 
         #bankrollRow {
@@ -92,24 +83,87 @@
             border-radius: 10px;
             border: 1px solid #ccc;
         }
+
+        /* ===== SPLIT HAND UI ===== */
+
+        .hands {
+            display: flex;
+            gap: 16px;
+            margin-top: 6px;
+        }
+
+        .hand-panel {
+            border: 1px solid rgba(255, 255, 255, 0.25);
+            border-radius: 12px;
+            padding: 12px;
+            min-width: 280px;
+            transition: all 0.15s ease;
+        }
+
+        .hand-panel.active {
+            border-color: rgba(255, 255, 255, 0.9);
+            box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.15);
+            transform: translateY(-2px);
+        }
+
+        .hand-panel.inactive {
+            opacity: 0.65;
+        }
+
+        .hand-header {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 8px;
+            font-weight: 600;
+        }
+
+        .hand-bet {
+            font-weight: 400;
+            opacity: 0.85;
+        }
     </style>
 </head>
 
 <body>
     <h1>Basic Blackjack Training</h1>
 
+    <!-- Dealer -->
     <div class="row">
         <strong>Dealer:</strong>
         <div id="dealerCards" class="cards hand"></div>
         <div id="dealerTotal"></div>
     </div>
 
+    <!-- Player Hands -->
     <div class="row">
         <strong>You:</strong>
-        <div id="playerCards" class="cards hand"></div>
-        <div id="playerTotal"></div>
+
+        <div id="playerHandsUI" class="hands">
+
+            <!-- Hand 1 -->
+            <div id="handPanel0" class="hand-panel">
+                <div class="hand-header">
+                    <span>Hand 1</span>
+                    <span id="handBet0" class="hand-bet"></span>
+                </div>
+                <div id="playerCards0" class="cards hand"></div>
+                <div id="playerTotal0"></div>
+            </div>
+
+            <!-- Hand 2 (hidden unless split) -->
+            <div id="handPanel1" class="hand-panel" style="display:none;">
+                <div class="hand-header">
+                    <span>Hand 2</span>
+                    <span id="handBet1" class="hand-bet"></span>
+                </div>
+                <div id="playerCards1" class="cards hand"></div>
+                <div id="playerTotal1"></div>
+            </div>
+
+        </div>
     </div>
 
+    <!-- Controls -->
     <div class="row">
         <button id="newGameBtn">New Game</button>
         <button id="hitBtn" disabled>Hit</button>
@@ -117,6 +171,7 @@
         <button id="surrenderBtn" disabled>Surrender</button>
         <button id="doubleBtn" disabled>Double</button>
         <button id="splitBtn" disabled>Split</button>
+
         <label style="margin-left: 20px;">
             Decks:
             <select id="deckCountSelect">
@@ -130,7 +185,10 @@
         </label>
     </div>
 
+    <!-- Status -->
     <div id="status" class="status">Click “New Game”.</div>
+
+    <!-- Bankroll -->
     <div class="row" id="bankrollRow">
         <strong>Bankroll:</strong> $<span id="bankrollAmt">1000</span>
         <span style="margin-left:12px;">
@@ -138,12 +196,14 @@
             $<input id="betInput" type="number" min="1" step="1" value="25" style="width:90px;">
         </span>
     </div>
+
     <img src="images/basic_strategy.jpg" alt="Casino table" class="table-image" />
+
     <script src="blackjack-game.js"></script>
+
     <footer class="credits">
         <em>
-            Playing cards thanks to
-            <br>
+            Playing cards thanks to<br>
             Vectorized Playing Cards 1.3 –
             <a href="http://code.google.com/p/vectorized-playing-cards/" target="_blank" rel="noopener noreferrer">
                 http://code.google.com/p/vectorized-playing-cards/
